# kairos-alloy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  PRD.md  README.md  STARTUP_PLAN.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-postgres.yml  ci.yml  codeql.yml  coverage.yml  perf-bench.yml  release.yml
apps/agents/agent-drl/: README.md  agent_drl.py
apps/agents/agent-dummy/: README.md  agent_dummy.py
apps/agents/agent-llm/: README.md
apps/agents/kairos-gym/: kairos_gym.py
apps/agents/tests/: test_kairos_gym.py  test_optimize_bayes.py  test_train_drl_sb3.py
apps/agents/train/: optimize_bayes.py  train_drl_sb3.py
apps/kairos-alloy/: Cargo.toml  build.rs
apps/kairos-alloy/src/: app.rs  bootstrap.rs  headless.rs  lib.rs  logging.rs  main.rs  tasks.rs  ui.rs
apps/kairos-bench/: Cargo.toml
apps/kairos-ingest/: Cargo.toml
apps/kairos-ingest/src/: main.rs
configs/: README.md  llm_gemini.toml  quickstart.toml  sample.toml
crates/kairos-application/: Cargo.toml
crates/kairos-application/src/: lib.rs  meta.rs  shared.rs
crates/kairos-application/src/backtesting/: mod.rs
crates/kairos-application/src/benchmarking/: mod.rs
crates/kairos-application/src/config/: mod.rs
crates/kairos-application/src/experiments/: cpcv.rs
crates/kairos-application/src/paper_trading/: mod.rs
crates/kairos-application/src/reporting/: mod.rs
crates/kairos-application/src/validation/: mod.rs
crates/kairos-application/tests/: benchmarking.rs  realtime_paper.rs  use_cases.rs
crates/kairos-bench/src/: main.rs
crates/kairos-cli/: Cargo.toml  build.rs
crates/kairos-cli/src/: infra.rs  main.rs  obs.rs
crates/kairos-cli/src/commands/: backtest.rs  bench.rs  common.rs  mod.rs  paper.rs  report.rs  validate.rs
crates/kairos-cli/src/config/: mod.rs
crates/kairos-cli/src/output/: mod.rs
crates/kairos-cli/tests/: prd20_integration.rs
crates/kairos-core/: Cargo.toml
crates/kairos-core/src/: lib.rs
crates/kairos-core/src/agents/: mod.rs
crates/kairos-core/src/data/: mod.rs  ohlcv.rs  sentiment.rs
crates/kairos-core/src/engine/: backtest.rs  market_data.rs  mod.rs
crates/kairos-core/src/features/: mod.rs
crates/kairos-core/src/metrics/: mod.rs
crates/kairos-core/src/portfolio/: mod.rs
crates/kairos-core/src/report/: mod.rs
crates/kairos-core/src/risk/: mod.rs
crates/kairos-core/src/strategy/: mod.rs
crates/kairos-core/src/types/: mod.rs  timeframe.rs
crates/kairos-domain/: Cargo.toml
crates/kairos-domain/src/: lib.rs
crates/kairos-domain/src/aggregates/: mod.rs  trading_account.rs
crates/kairos-domain/src/entities/: metrics.rs  mod.rs  risk.rs
crates/kairos-domain/src/events/: domain_event.rs
crates/kairos-domain/tests/: proptests.rs  strategy_regression.rs
crates/kairos-infrastructure/: Cargo.toml
crates/kairos-infrastructure/src/: lib.rs
crates/kairos-infrastructure/src/agents/: mod.rs
crates/kairos-infrastructure/src/artifacts/: mod.rs
crates/kairos-infrastructure/src/market_data/: ohlcv.rs
crates/kairos-infrastructure/src/market_stream/: mod.rs
crates/kairos-infrastructure/src/persistence/: mod.rs  postgres_ohlcv.rs
crates/kairos-infrastructure/src/reporting/: mod.rs
crates/kairos-infrastructure/src/sentiment/: mod.rs
crates/kairos-ingest/: Cargo.toml
crates/kairos-ingest/src/: lib.rs  main.rs
crates/kairos-tui/: Cargo.toml
crates/kairos-tui/src/: app.rs  headless.rs  lib.rs  main.rs  tasks.rs  ui.rs
docker/: entrypoint.sh
docs/: README.md
docs/agent/: README.md
docs/agent/v1/: request.example.json  request.schema.json  request_batch.example.json  request_batch.schema.json  response.example.json  response.schema.json  response_batch.example.json  response_batch.schema.json
docs/architecture/: hexagonal_ddd.md
docs/artifacts/: README.md  summary.schema.json
docs/engine/: execution.md
notebooks/: 00_setup_data.ipynb  README.md  artigo_02_benchmark.ipynb  artigo_03_exog_latencia.ipynb  artigo_04_06_robustez_execucao.ipynb  artigo_05_representacao.ipynb  gym_sanity.ipynb  requirements.txt
notebooks/_lib/: __init__.py  bootstrap.py  cpcv.py  dataframes.py  metrics.py  plots.py  psr_dsr.py  reality_check_spa.py  runs.py
observability/: docker-compose.observability.yml
observability/prometheus/: alerts.yml  prometheus.yml
platform/kairos-application/: Cargo.toml
platform/kairos-application/src/benchmarking/: mod.rs
platform/kairos-application/src/experiments/: cpcv.rs  mod.rs  sweep.rs
platform/kairos-application/src/paper_trading/: mod.rs
platform/kairos-application/src/reporting/: mod.rs
platform/kairos-application/tests/: prd20_integration.rs  realtime_paper.rs
platform/kairos-domain/: Cargo.toml
platform/kairos-domain/tests/: strategy_regression.rs
platform/kairos-infrastructure/: Cargo.toml
platform/kairos-infrastructure/src/: lib.rs
platform/ops/configs/: README.md  llm_gemini.toml  quickstart.toml  sample.toml
platform/ops/migrations/: 0001_create_ohlcv_candles.sql
platform/ops/observability/: docker-compose.observability.yml
platform/ops/scripts/: README.md  cleanup-root-owned.sh  compare_runs.py  ingest-baseline-2017-2025.sh  security-check.sh  verify-layout.sh
research/: ARTIGO 2 - Benchmark de DRL em Cripto - PPO vs SAC vs DQN em Ambiente Padronizado.md  ARTIGO 3 - Informação Exógena Observável no Tempo para DRL em Criptomoedas - Latência e Valor Marginal.md  ARTIGO 4 - Teoria dos Jogos aplicada ao Treinamento de Agentes DRL em Criptomoedas.md  ARTIGO 5 - Representação do Preço para DRL em Criptomoedas - Orçamento de Complexidade e Auditoria Anti-Seleção.md  ARTIGO 6 - DRL em Criptomoedas sob Restrições de Execução - Custos, Impacto e Robustez.md
scripts/: README.md  cleanup-root-owned.sh
tests/: README.md
tools/: agent_drl.py  agent_llm.py  kairos_gym.py
tools/agent-dummy/: README.md  agent_dummy.py
tools/agent-llm/: README.md  agent_llm.py
tools/tests/: test_agent_drl.py  test_kairos_gym.py
(+63 files in other folders)
