[package]
name = "kairos-bench"
version = "0.1.0"
edition = "2021"
description = "Synthetic benchmarking tool for Kairos Alloy (dev)."
license = "LicenseRef-Proprietary"
autobins = false
default-run = "kairos-bench"

[[bin]]
name = "kairos-bench"
path = "src/main.rs"

[dependencies]
kairos-application = { path = "../kairos-application", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", optional = true }
pprof = { version = "0.14", optional = true, features = ["flamegraph"] }

[features]
default = ["prometheus", "pprof"]
prometheus = ["dep:metrics-exporter-prometheus"]
pprof = ["dep:pprof"]
