[package]
name = "kairos-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for Kairos Alloy."
license = "UNLICENSED"
autobins = false
default-run = "kairos-alloy"

[[bin]]
name = "kairos-alloy"
path = "src/main.rs"

[dependencies]
kairos-core = { path = "../kairos-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
