[package]
name = "kairos-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for Kairos Alloy."
license = "UNLICENSED"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
