[package]
name = "kairos-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for Kairos Alloy."
license = "LicenseRef-Proprietary"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
kairos-domain = { path = "../kairos-domain", version = "0.1.0" }
kairos-infrastructure = { path = "../kairos-infrastructure", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
