[package]
name = "kairos-ingest"
version = "0.1.0"
edition = "2021"
description = "KuCoin OHLCV ingestion into PostgreSQL for Kairos Alloy."
license = "LicenseRef-Proprietary"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
