[package]
name = "kairos-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI (TUI) for Kairos Alloy."
license = "LicenseRef-Proprietary"
autobins = false
default-run = "kairos-alloy"

[[bin]]
name = "kairos-alloy"
path = "src/main.rs"

[build-dependencies]
 

[dependencies]
kairos-application = { path = "../kairos-application", version = "0.1.0" }
kairos-domain = { path = "../kairos-domain", version = "0.1.0" }
kairos-infrastructure = { path = "../kairos-infrastructure", version = "0.1.0" }

clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
parking_lot = "0.12"
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", optional = true }

[features]
default = ["prometheus"]
prometheus = ["dep:metrics-exporter-prometheus"]
realtime-kucoin = ["kairos-infrastructure/realtime-kucoin"]
