[package]
name = "kairos-application"
version = "0.1.0"
edition = "2021"
description = "Application/use-case layer for Kairos Alloy."
license = "LicenseRef-Proprietary"

[dependencies]
kairos-domain = { path = "../kairos-domain", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
metrics = "0.24"
tracing = "0.1"
csv = "1"
sha2 = "0.10"
chrono = "0.4"

[dev-dependencies]
kairos-infrastructure = { path = "../kairos-infrastructure", version = "0.1.0" }
kairos-ingest = { path = "../../apps/kairos-ingest", version = "0.1.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
